<?php die(); ?>
Akeeba LoginGuard 3.3.7
================================================================================
~ All tables now have a PRIMARY KEY
# [LOW] The ip and ua columns were not always removed from the #__loginguard_tfa table

Akeeba LoginGuard 3.3.6
================================================================================
- Dropped PHP 7.1 support
~ Add PHP 8.0 in the list of known PHP versions, recommend PHP 7.4 or later
# [HIGH] Joomla 4 beta 6 changed how sessions work, breaking Akeeba LoginGuard

Akeeba LoginGuard 3.3.5
================================================================================
+ Allow changing the code generation time period for Code by Email
~ Replace zero datetime with nullable datetime (gh-94)
# [LOW] You can see, but not use, the Methods page as a guest (gh-95)

Akeeba LoginGuard 3.3.4
================================================================================
+ Option to forcibly enable the Email plugin for everyone (gh-91)
~ WebAuthn: JavaScript now loads deferred
~ Remember Me: Remove inline JavaScript
~ Code refactoring for minimum compatibility with PHP 7.1, Joomla 3.9
# [MEDIUM] WebAuthn: some Platform and FIDO2 authenticators are ignored unless the user clicks a button first. Changed the UI to require a button press.

Akeeba LoginGuard 3.3.3
================================================================================
~ Added passwordless to the Silent login authentication response types
~ Internals change: Zend Framework is now Laminas, updated dependencies accordingly
~ Improved unhandled PHP exception error page
# [MEDIUM] Multiple email / SMS with the second factor code are sent on some sites when these methods are default for a user.
# [LOW] When CloudFlare CDN went down on August 30, 2020 LoginGuard's TSV Remember Me code got hosed. Self-hosting the whole lot now.

Akeeba LoginGuard 3.3.2
================================================================================